# AiMind-AiModels

./: .env  .gitignore  Florence-VL.ipynb  VARCO-VISIONOCR.ipynb  analysis_metrics.py  cleanOCR.ipynb  diary_ocr_pipeline.ipynb  drawing_norm_dist_stats.csv  drawing_score.py  easy.py  main.py  ocr.ipynb  ocrtest.ipynb  peer_compare_cli.py  pyproject.toml  requirements.docker.txt  requirements.txt  ~$drawing_norm_dist_stats.csv  정규분포.py  해석json.py
chatbot/: chatbot.py  guideChatbot.py  psychologicalAnalysisChatbot.py  test.py
chatbot/chroma_db/: chroma.sqlite3
chatbot/guides/: member_website_guide.md
chatbot/guieds/: member_website_guied.md  usage_guide.md
chroma_db/: chroma.sqlite3
htp_knowledge_base/5892e832-3b10-4e88-8288-1fadfddff5ff/: index_metadata.pickle
image_to_json/: image_to_json.py
image_to_json/result/: 나무_12_여_20260204_155005.json  나무_12_여_20260204_155055.json  나무_7_남_00367.json  나무_8_남_20260205_141258.json  나무_8_남_20260205_141347.json  나무_8_여_20260204_153433.json  나무_8_여_20260204_153610.json  나무_8_여_20260204_154642.json  나무_8_여_20260204_154735.json  나무_8_여_20260204_154825.json  나무_8_여_20260204_154919.json  나무_8_여_20260204_224307.json  남자사람_7_남_00978.json  (+70 more)
jsonToLlm/: README.md  gemini_integration.py  htp_indicator_parser.py  interpretation_prompts.py  legacy_converter.py  main.py  requirements.txt  run_batch_interpret.py  store_to_chroma.py  tree_analyzer.py
ocr/: 2page15_diary_result.json  diary_ocr_pipeline.ipynb  diary_ocr_pipeline.py  requirement.txt  requirements.txt  weight_image_crop_process.ipynb
result/: htp_final_dataset.json
(+160 files in other folders)
