[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "JuMi Kim",email = "kjm90110@naver.com"}
]
requires-python = ">=3.13"
dependencies = [
    "chromadb (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
